--- a/Unity15/Packages/manifest.json
+++ b/Unity15/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.15",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.inputsystem": "1.2.0",
     "com.unity.render-pipelines.universal": "10.7.0",
     "com.unity.terrain-tools": "3.0.2-preview.3",
     "com.unity.test-framework": "1.1.31",
